Bug 276631 - crash in networkmanagement while configuring wifi
Summary: crash in networkmanagement while configuring wifi
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: System Settings Bugs
URL:
Keywords:
: 278626 279509 284334 285373 286753 291012 293225 294942 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-27 19:05 UTC by collura
Modified: 2013-09-22 12:53 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.46 KB, text/plain)
2011-06-27 20:40 UTC, collura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description collura 2011-06-27 19:05:12 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.3
Operating System: Linux 2.6.38.8-32.fc15.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:

was setting up a wifi connection when crash occured to test nm component from updates-testing: kde-plasma-networkmanagement-1:0.9-0.53.20110616git.nm09.fc15 (x86_64)

-- Backtrace:
Application: KDE Control Module (kcmshell4), signal: Aborted
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  0x00000033774352d5 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x0000003377436beb in abort () at abort.c:93
#8  0x0000003381c6aaa4 in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2282
#9  0x00007ffe0e3b94fc in ~QDebug (this=0x7fffb2335830, __in_chrg=<optimized out>) at /usr/include/QtCore/qdebug.h:85
#10 ~QDebug (this=0x7fffb2335830, __in_chrg=<optimized out>) at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/libs/internals/knmserviceprefs.cpp:19
#11 KNetworkManagerServicePrefs::self () at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/libs/internals/knmserviceprefs.cpp:22
#12 0x00007ffe0ead0109 in ManageConnectionWidget::save (this=0x139a6b0) at /usr/src/debug/networkmanagement-0.9/settings/config/manageconnectionwidget.cpp:662
#13 0x00000033926213a7 in KCModuleProxy::save (this=<optimized out>) at /usr/src/debug/kdelibs-4.6.3/kutils/kcmoduleproxy.cpp:279
#14 0x000000339261e3e0 in KCMultiDialogPrivate::apply (this=<optimized out>) at /usr/src/debug/kdelibs-4.6.3/kutils/kcmultidialog.cpp:300
#15 0x000000339261f62c in KCMultiDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb23359f0) at /usr/src/debug/kdelibs-4.6.3/x86_64-redhat-linux-gnu/kutils/kcmultidialog.moc:95
#16 0x0000003382205250 in KCMShellMultiDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb23359f0) at /usr/src/debug/kdebase-runtime-4.6.3/x86_64-redhat-linux-gnu/kcmshell/main.moc:130
#17 0x0000003381d6ceba in QMetaObject::activate (sender=0x138e670, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#18 0x0000003386b9ad6e in KDialog::slotButtonClicked (this=0x138e670, button=8) at /usr/src/debug/kdelibs-4.6.3/kdeui/dialogs/kdialog.cpp:887
#19 0x0000003386b9b3e2 in KDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fffb2335c20) at /usr/src/debug/kdelibs-4.6.3/x86_64-redhat-linux-gnu/kdeui/kdialog.moc:190
#20 0x0000003386c70540 in KPageDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb2335c20) at /usr/src/debug/kdelibs-4.6.3/x86_64-redhat-linux-gnu/kdeui/kpagedialog.moc:70
#21 0x000000339261f540 in KCMultiDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb2335c20) at /usr/src/debug/kdelibs-4.6.3/x86_64-redhat-linux-gnu/kutils/kcmultidialog.moc:86
#22 0x0000003382205250 in KCMShellMultiDialog::qt_metacall (this=0x138e670, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb2335c20) at /usr/src/debug/kdebase-runtime-4.6.3/x86_64-redhat-linux-gnu/kcmshell/main.moc:130
#23 0x0000003381d6ceba in QMetaObject::activate (sender=0x138edf0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb2335c20) at kernel/qobject.cpp:3278
#24 0x0000003381d7312e in QSignalMapper::mapped (this=<optimized out>, _t1=8) at .moc/release-shared/moc_qsignalmapper.cpp:101
#25 0x0000003381d736cb in QSignalMapper::map (this=0x138edf0, sender=0x13aa630) at kernel/qsignalmapper.cpp:266
#26 0x0000003381d73b20 in QSignalMapper::qt_metacall (this=0x138edf0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffb2335d70) at .moc/release-shared/moc_qsignalmapper.cpp:87
#27 0x0000003381d6ceba in QMetaObject::activate (sender=0x13aa630, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb2335d70) at kernel/qobject.cpp:3278
#28 0x0000003385818df2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#29 0x0000003385562cfe in QAbstractButtonPrivate::emitClicked (this=0x13ad6c0) at widgets/qabstractbutton.cpp:546
#30 0x000000338556403b in QAbstractButtonPrivate::click (this=0x13ad6c0) at widgets/qabstractbutton.cpp:539
#31 0x00000033855642ac in QAbstractButton::mouseReleaseEvent (this=0x13aa630, e=0x7fffb2336640) at widgets/qabstractbutton.cpp:1121
#32 0x0000003385207b04 in QWidget::event (this=0x13aa630, event=0x7fffb2336640) at kernel/qwidget.cpp:8259
#33 0x00000033851b7444 in notify_helper (e=0x7fffb2336640, receiver=0x13aa630, this=0x127d1c0) at kernel/qapplication.cpp:4462
#34 QApplicationPrivate::notify_helper (this=0x127d1c0, receiver=0x13aa630, e=0x7fffb2336640) at kernel/qapplication.cpp:4434
#35 0x00000033851bcbcb in QApplication::notify (this=<optimized out>, receiver=0x13aa630, e=0x7fffb2336640) at kernel/qapplication.cpp:4023
#36 0x0000003386c41806 in KApplication::notify (this=0x7fffb2337380, receiver=0x13aa630, event=0x7fffb2336640) at /usr/src/debug/kdelibs-4.6.3/kdeui/kernel/kapplication.cpp:311
#37 0x0000003381d5a1ac in QCoreApplication::notifyInternal (this=0x7fffb2337380, receiver=0x13aa630, event=0x7fffb2336640) at kernel/qcoreapplication.cpp:731
#38 0x00000033851b8412 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:215
#39 QApplicationPrivate::sendMouseEvent (receiver=0x13aa630, event=0x7fffb2336640, alienWidget=0x13aa630, nativeWidget=0x138e670, buttonDown=0x13aa630, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#40 0x0000003385234095 in QETWidget::translateMouseEvent (this=0x138e670, event=<optimized out>) at kernel/qapplication_x11.cpp:4461
#41 0x0000003385232f6a in QApplication::x11ProcessEvent (this=0x7fffb2337380, event=0x7fffb2336f00) at kernel/qapplication_x11.cpp:3587
#42 0x000000338525a2ec in x11EventSourceDispatch (s=0x1282bc0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#43 0x00000033794427ed in g_main_dispatch (context=0x1281ce0) at gmain.c:2441
#44 g_main_context_dispatch (context=0x1281ce0) at gmain.c:3014
#45 0x0000003379442fc8 in g_main_context_iterate (context=0x1281ce0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3092
#46 0x000000337944325c in g_main_context_iteration (context=0x1281ce0, may_block=1) at gmain.c:3155
#47 0x0000003381d84d0f in QEventDispatcherGlib::processEvents (this=0x1260ca0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#48 0x0000003385259fde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#49 0x0000003381d596c2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#50 0x0000003381d598bf in QEventLoop::exec (this=0x7fffb23372d0, flags=...) at kernel/qeventloop.cpp:201
#51 0x0000003385661b46 in QDialog::exec (this=0x138e670) at dialogs/qdialog.cpp:552
#52 0x0000003382207702 in kdemain (_argc=<optimized out>, _argv=<optimized out>) at /usr/src/debug/kdebase-runtime-4.6.3/kcmshell/main.cpp:287
#53 0x000000337742139d in __libc_start_main (main=0x4006c0 <main(int, char**)>, argc=2, ubp_av=0x7fffb2337b18, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffb2337b08) at libc-start.c:226
#54 0x00000000004006f1 in _start ()

Reported using DrKonqi
Comment 1 collura 2011-06-27 20:40:19 UTC
Created attachment 61386 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.6.3 (4.6.3) using Qt 4.7.3

- What I was doing when the application crashed:

think that both times the crashes happened while i was actually clicking the apply button after some action.

think first time might have beed adding a connetction 

second time i had just deleted a connection.

think when hit apply that all was well but then after transaction cleared the apply relit and when i hit it again is when the crash happened

-- Backtrace (Reduced):
#9  0x00000034ae6324fc in ~QDebug (this=0x7ffff0082470, __in_chrg=<optimized out>) at /usr/include/QtCore/qdebug.h:85
#10 ~QDebug (this=0x7ffff0082470, __in_chrg=<optimized out>) at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/libs/internals/knmserviceprefs.cpp:19
#11 KNetworkManagerServicePrefs::self () at /usr/src/debug/networkmanagement-0.9/x86_64-redhat-linux-gnu/libs/internals/knmserviceprefs.cpp:22
#12 0x00007f927c2ef109 in ManageConnectionWidget::save (this=0x1810590) at /usr/src/debug/networkmanagement-0.9/settings/config/manageconnectionwidget.cpp:662
#13 0x00000034aea213a7 in KCModuleProxy::save (this=<optimized out>) at /usr/src/debug/kdelibs-4.6.3/kutils/kcmoduleproxy.cpp:279
Comment 2 collura 2011-06-27 20:48:54 UTC
changed title

the first time abort says kcmshell4 but the second time abort says systemsettings but both times happened when clicked apply after making a change in f15-kde network settings.

still probably not best title and may be 2 separate bugs but filed same place for now since both happened after editing net settings.
Comment 4 Lamarque V. Souza 2011-06-28 04:14:19 UTC
Git commit 2a7bb6e4d0f5f3708707346374f61a7786fb6f73 by Lamarque V. Souza.
Committed on 28/06/2011 at 00:33.
Pushed by lvsouza into branch 'nm09'.

Create KNetworkManagerServicePrefs pointer before using it.

BUG: 276631

M  +1    -1    plasma_nm_version.h     
M  +3    -0    settings/config/manageconnectionwidget.cpp     

http://commits.kde.org/networkmanagement/2a7bb6e4d0f5f3708707346374f61a7786fb6f73
Comment 5 Lamarque V. Souza 2011-07-27 15:37:40 UTC
*** Bug 278626 has been marked as a duplicate of this bug. ***
Comment 6 Lamarque V. Souza 2011-08-06 22:46:21 UTC
*** Bug 279509 has been marked as a duplicate of this bug. ***
Comment 7 Lamarque V. Souza 2011-10-18 16:35:42 UTC
*** Bug 284334 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2011-10-31 15:23:31 UTC
*** Bug 285373 has been marked as a duplicate of this bug. ***
Comment 9 Lamarque V. Souza 2011-11-20 19:08:43 UTC
*** Bug 286753 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2012-01-09 01:31:36 UTC
*** Bug 291012 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2012-02-10 18:31:41 UTC
*** Bug 293225 has been marked as a duplicate of this bug. ***
Comment 12 Jekyll Wu 2012-02-27 18:43:52 UTC
*** Bug 294942 has been marked as a duplicate of this bug. ***