Create KNetworkManagerServicePrefs pointer before using it.

BUG: 276631